[package]
name        = 'pallet-currencies'
authors     = ["DICO-TEAM"]
description = 'currencies'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2018'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1', optional = true }


frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-std        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-io         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}

# orml
orml-tokens   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

# local
dico-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-core         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "dico-primitives/std",
    "orml-tokens/std",
    "orml-tokens/std",
#    "sp-core/std",
]
