[package]
name        = 'pallet-currencies'
authors     = ["DICO-TEAM"]
description = 'currencies'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scale-info    = { version = "1.0", default-features = false, features = ["derive"] }
serde         = { version = "1.0.102", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-std        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
codec         = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false, optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}


# orml
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master"}
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master"}

# local
dico-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"}
sp-core         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"}
orml-tokens     = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master"}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",

    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "dico-primitives/std",
    "orml-tokens/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-io/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
