[package]
name        = 'pallet-currencies'
authors     = ["DICO-TEAM"]
description = 'currencies'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scale-info    = { version = "2.1.1", default-features = false, features = ["derive"] }
serde         = { version = "1.0.102", optional = true }
codec         = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }

frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false, optional = true }
pallet-balances    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}

# xcm
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25", default-features = false }

# orml
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.25"}
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.25"}

# local
dico-primitives = { path = "../../primitives", default-features = false }


# vc
daos-create-dao = {path = "../daos/create-dao", default-features = false}
pallet-vc = {path = "../vc", default-features = false}

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-core         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
orml-tokens     = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.25"}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",

    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "dico-primitives/std",
    "orml-tokens/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-io/std",
	"daos-create-dao/std",
	"pallet-vc/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
