[package]
name       = "pallet-dao"
authors    = ["DICO-TEAM"]
license    = 'Apache 2.0'
version    = '1.0.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition    = '2018'



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false, optional = true }
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
pallet-timestamp   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}


log = { version = "0.4.14", default-features = false }

ico                               = { package = "pallet-ico", path = "../ico", default-features = false, version = "1.0.0"}
dico-primitives                   = { path = "../../primitives", default-features = false,  version = "1.0.0"}
pallet-balances                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false}
orml-tokens                       = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "650ef607d023e4537d3f2932baa5e50bc3a349cb"}
currencies                        = { package = "pallet-currencies", path = '../currencies', default-features = false, version = '1.0.0'}
pallet-kyc                        = { path = "../kyc", default-features = false,  version = "1.0.0"}
dico-treasury                     = { package = "pallet-dico-treasury", path = "../treasury", default-features = false,  version = "1.0.0" }
pallet-pricedao                   = { path = "../pricedao", default-features = false}
pallet-amm                        = { path = "../amm", default-features = false }
pallet-oracle                     = { path = "../oracle", default-features = false }
orml-traits                       = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "650ef607d023e4537d3f2932baa5e50bc3a349cb"}
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }


[dev-dependencies]
hex-literal = "0.3.1"
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

[features]
default = ["std"]
std = [
	"orml-traits/std",
	"ico/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"log/std",
	"pallet-timestamp/std",
	"dico-primitives/std",
	"pallet-balances/std",
	"orml-tokens/std",
	"currencies/std",
	"pallet-kyc/std",
	"pallet-pricedao/std",
	"pallet-amm/std",
	"pallet-oracle/std",
	"pallet-randomness-collective-flip/std",

]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
#try-runtime = ["frame-support/try-runtime"]
