[package]
name       = "pallet-dao"
authors    = ["DICO-TEAM"]
license    = 'Apache 2.0'
version    = '1.0.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = '0.10.1' }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1', optional = true }
log = { version = "0.4.14", default-features = false }


# local pallet
ico                               = { package = "pallet-ico", path = "../ico", default-features = false }
currencies                        = { package = "pallet-currencies", path = '../currencies', default-features = false}
pallet-kyc                        = { path = "../kyc", default-features = false}
dico-treasury                     = { package = "pallet-dico-treasury", path = "../treasury", default-features = false}
pallet-pricedao                   = { path = "../pricedao", default-features = false}
pallet-amm                        = { path = "../amm", default-features = false }
pallet-oracle                     = { path = "../oracle", default-features = false }
dico-primitives                   = { path = "../../primitives", default-features = false}

# orml
orml-tokens   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-traits   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
# substrate
sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false, optional = true }
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
pallet-timestamp   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-balances                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}


[dev-dependencies]
hex-literal = "0.3.1"
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

[features]
default = ["std"]
std = [
	"orml-traits/std",
	"ico/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"log/std",
	"pallet-timestamp/std",
	"dico-primitives/std",
	"pallet-balances/std",
	"orml-tokens/std",
	"currencies/std",
	"pallet-kyc/std",
	"pallet-pricedao/std",
	"pallet-amm/std",
	"pallet-oracle/std",
	"pallet-randomness-collective-flip/std",

]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
#try-runtime = ["frame-support/try-runtime"]
