[package]
name       = "pallet-dao"
authors    = ["DICO-TEAM"]
license    = 'Apache 2.0'
version    = '1.0.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info      = { version = "2.1.1", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = '0.11.1'}
codec           = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
serde           = { version = '1', optional = true }



# local pallet
ico                               = { package = "pallet-ico", path = "../ico", default-features = false }
currencies                        = { package = "pallet-currencies", path = '../currencies', default-features = false}
pallet-kyc                        = { path = "../kyc", default-features = false}
dico-treasury                     = { package = "pallet-dico-treasury", path = "../treasury", default-features = false}
pallet-pricedao                   = { path = "../pricedao", default-features = false}
pallet-amm                        = { path = "../amm", default-features = false }
pallet-oracle                     = { path = "../oracle", default-features = false }
dico-primitives                   = { path = "../../primitives", default-features = false}

# orml
orml-tokens   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.25" }
orml-traits   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.25" }
# substrate
sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false, optional = true }
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
pallet-timestamp   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.25', default-features = false }
pallet-balances                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}


[dev-dependencies]
hex-literal = "0.3.1"


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"primitive-types/std",

	"orml-tokens/std",
	"orml-traits/std",

	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",

	"frame-system/std",
	"frame-support/std",

	"dico-primitives/std",
	"currencies/std",
	"ico/std",
	"pallet-kyc/std",
	"pallet-pricedao/std",
	"pallet-amm/std",
	"pallet-oracle/std",

	"pallet-timestamp/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",

]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
#try-runtime = ["frame-support/try-runtime"]
