[package]
name       = "pallet-ico"
authors    = ["DICO-TEAM"]
version    = "1.0.0"
license    = 'Apache 2.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info      = { version = "2.1.1", default-features   = false, features                         = ["derive"] }
primitive-types = { version = '0.11.1',default-features = false}
codec           = { version = '3.0.0',package           = 'parity-scale-codec',  default-features = false }


frame-benchmarking                = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false, optional = true }
frame-support                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
frame-system                      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-runtime                        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-std                            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-core                           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
sp-io                             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
pallet-balances                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.25', default-features = false }


# orml
orml-tokens   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = 'polkadot-v0.9.25' }
orml-traits   = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = 'polkadot-v0.9.25' }
# local
currencies      = { package = "pallet-currencies", path = '../currencies', default-features = false}
pallet-kyc      = { path = "../kyc", default-features = false }
dico-primitives = { path = "../../primitives", default-features = false}
dico-treasury   = { package = "pallet-dico-treasury", path = "../treasury", default-features = false}
pallet-pricedao = { path = "../pricedao", default-features = false}
pallet-amm      = { path = "../amm", default-features = false }
pallet-oracle   = { path = "../oracle", default-features = false }

# daos
daos-create-dao = {path = "../daos/create-dao", default-features = false}


[features]
default = ['std']
std = [
    "codec/std",
    "primitive-types/std",

    "frame-support/std",
    "frame-system/std",

    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",


    "orml-traits/std",
    "orml-tokens/std",

    "dico-primitives/std",

    "currencies/std",
    "pallet-kyc/std",
    "pallet-pricedao/std",
    "pallet-amm/std",
    "pallet-oracle/std",

    "pallet-balances/std",
	"pallet-randomness-collective-flip/std",

	"daos-create-dao/std",

]

runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

