[package]
name        = 'pallet-kyc'
authors     = ["DICO-TEAM"]
description = 'Know Your Customer(KYC) pallet'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info 		   = { version = "1.0", default-features = false, features = ["derive"] }
codec              = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }

# substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }


[dev-dependencies]
sp-core             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-support-test  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-balances     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }



[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
